# bard

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  pm2.config.js  pyproject.toml
app/: __init__.py
app/api/: __init__.py  deps.py
app/api/routes/: __init__.py  auth.py  chat.py
app/common/: __init__.py  helpers.py
app/common/constants/: account_type_enum.py
app/core/: __init__.py  config.py  logging_config.py
app/dal/: __init__.py
app/dal/models/: base.py
app/db/: base.py
app/db/mongo/: auth.py  base.py
app/models/: auth.py  base.py  tools.py
app/modules/tools/searchers/: __init__.py  base_searcher.py  jina_searcher.py  linkup_searcher.py  tavily_searcher.py
app/schemas/: __init__.py  auth.py
app/utils/: __init__.py
assets/: NOTE.md
